--- a/index.html
+++ b/index.html
@@ -1342,7 +1342,7 @@
 					<span style="display: flex; align-items: center;">
 						<label for="hookGlobal" style="width: 100px;">Hook</label>
 						<img id="hookGlobalInfo" style="height: 23px; width: 23px; margin: 0 5px 0 5px;" src="media/otherIcons/info.svg" onclick="" />
-						<input id="hookGlobal" type="text" class="cleanCursorInput" placeholder="hook" size="40" onkeyup="hookGlobalUpdate(); this.size = this.value.length * 1.15; if (this.value.length < 2) {this.size = 40}" />
+						<input id="hookGlobal" type="text" class="cleanCursorInput" placeholder="hook" size="40" onkeyup="hookGlobalUpdate();" />
 						<img id="hookGlobalClear" alt="" src="media/otherIcons/clear.svg" style="height: 25px; width: 25px; margin: 0 5px 0 5px;" onclick="document.getElementById('hookGlobal').value = null;"/>
 					</span>
 
@@ -1350,7 +1350,7 @@
 					<span style="display: flex; align-items: center;">
 						<label for="hookResolutionGlobal" style="width: 100px;">Hook Resolution</label>
 						<img id="hookResolutionGlobalInfo" style="height: 23px; width: 23px; margin: 0 5px 0 5px;" src="media/otherIcons/info.svg" onclick="" />
-						<input id="hookResolutionGlobal" type="text" class="cleanCursorInput" placeholder="hook resolution" size="40" onkeyup="hookResolutionGlobalUpdate(); this.size = this.value.length * 1.15; if (this.value.length < 2) {this.size = 40}" />
+						<input id="hookResolutionGlobal" type="text" class="cleanCursorInput" placeholder="hook resolution" size="40" onkeyup="hookResolutionGlobalUpdate();" />
 						<img id="hookResolutionGlobalClear" alt="" src="media/otherIcons/clear.svg" style="height: 25px; width: 25px; margin: 0 5px 0 5px;" onclick="document.getElementById('hookResolutionGlobal').value = null;"/>
 					</span>
 
@@ -1376,7 +1376,7 @@
 					<span style="display: flex; align-items: center;">
 						<label for="companyUpdateHeadline" style="width: 100px;">Headline</label>
 						<img id="companyUpdateHeadlineInfo" style="height: 23px; width: 23px; margin: 0 5px 0 5px;" src="media/otherIcons/info.svg" onclick="" />
-						<input id="companyUpdateHeadline" type="text" class="cleanCursorInput" placeholder="Headline" size="40" onkeyup="companyUpdateHeadlineUpdate(); this.size = this.value.length * 1.15; if (this.value.length < 2) {this.size = 40}" />
+						<input id="companyUpdateHeadline" type="text" class="cleanCursorInput" placeholder="Headline" size="40" onkeyup="companyUpdateHeadlineUpdate();" />
 						<img id="companyUpdateHeadlineClear" alt="" src="media/otherIcons/clear.svg" style="height: 25px; width: 25px; margin: 0 5px 0 5px;" onclick="document.getElementById('companyUpdateHeadline').value = null;"/>
 					</span>
 
@@ -1405,7 +1405,7 @@
 					<span style="display: flex; align-items: center;">
 						<label for="salePromotionTitle" style="width: 100px;">Title</label>
 						<img id="salePromotionTitleInfo" style="height: 23px; width: 23px; margin: 0 5px 0 5px;" src="media/otherIcons/info.svg" onclick="" />
-						<input id="salePromotionTitle" type="text" class="cleanCursorInput" placeholder="Title" size="40" onkeyup="salePromotionTitleUpdate(); this.size = this.value.length * 1.15; if (this.value.length < 2) {this.size = 40}" />
+						<input id="salePromotionTitle" type="text" class="cleanCursorInput" placeholder="Title" size="40" onkeyup="salePromotionTitleUpdate();" />
 						<img id="salePromotionTitleClear" alt="" src="media/otherIcons/clear.svg" style="height: 25px; width: 25px; margin: 0 5px 0 5px;" onclick="document.getElementById('salePromotionTitle').value = null;"/>
 					</span>
 
@@ -1413,7 +1413,7 @@
 					<span style="display: flex; align-items: center;">
 						<label for="salePromotionProductOrService" style="width: 100px;">Product or Service</label>
 						<img id="salePromotionProductOrServiceInfo" style="height: 23px; width: 23px; margin: 0 5px 0 5px;" src="media/otherIcons/info.svg" onclick="" />
-						<input id="salePromotionProductOrService" type="text" class="cleanCursorInput" placeholder="Product or service being promoted" size="40" onkeyup="salePromotionProductOrServiceUpdate(); this.size = this.value.length * 1.15; if (this.value.length < 2) {this.size = 40}" />
+						<input id="salePromotionProductOrService" type="text" class="cleanCursorInput" placeholder="Product or service being promoted" size="40" onkeyup="salePromotionProductOrServiceUpdate();" />
 						<img id="salePromotionProductOrServiceClear" alt="" src="media/otherIcons/clear.svg" style="height: 25px; width: 25px; margin: 0 5px 0 5px;" onclick="showBrandPopup();"/>
 					</span>
 
@@ -1450,8 +1450,11 @@
 					<span style="display: flex; align-items: center;">
 						<label for="eventPromotionTitle" style="width: 100px;">Title</label>
 						<img id="eventPromotionTitleInfo" style="height: 23px; width: 23px; margin: 0 5px 0 5px;" src="media/otherIcons/info.svg" onclick="" />
-						<input id="eventPromotionTitle" type="text" class="cleanCursorInput" placeholder="Title" size="40" onkeyup="eventPromotionTitleUpdate(); this.size = this.value.length * 1.15; if (this.value.length < 2) {this.size = 40}" />
+						<input id="eventPromotionTitle" type="text" class="cleanCursorInput" placeholder="Title" size="40" onkeyup="eventPromotionTitleUpdate();" />
 						<img id="eventPromotionTitleClear" alt="" src="media/otherIcons/clear.svg" style="height: 25px; width: 25px; margin: 0 5px 0 5px;" onclick="document.getElementById('eventPromotionTitle').value = null;"/>
+						<button onclick="fontPriority1();">1</button>
+						<button onclick="fontPriority2();">2</button>
+						<button onclick="fontPriority3();">3</button>
 					</span>
 
 					<!-- Start Date -->
@@ -1474,7 +1477,7 @@
 					<span style="display: flex; align-items: center;">
 						<label for="eventPromotionLocation" style="width: 100px;">Location</label>
 						<img id="eventPromotionLocationInfo" style="height: 23px; width: 23px; margin: 0 5px 0 5px;" src="media/otherIcons/info.svg" onclick="" />
-						<input id="eventPromotionLocation" type="text" class="cleanCursorInput" size="40" placeholder="123 Main Street Boston, MA style" onkeyup="eventPromotionLocationUpdate(); this.size = this.value.length * 1.15; if (this.value.length < 2) {this.size = 40}" />
+						<input id="eventPromotionLocation" type="text" class="cleanCursorInput" size="40" placeholder="123 Main Street Boston, MA style" onkeyup="eventPromotionLocationUpdate();" />
 						<img id="eventPromotionLocationClear" alt="" src="media/otherIcons/clear.svg" style="height: 25px; width: 25px; margin: 0 5px 0 5px;" onclick="document.getElementById('eventPromotionLocation').value = null;" />
 						<img id="eventPromotionLocationGet" alt="" src="media/otherIcons/link.svg" style="height: 25px; width: 25px; margin: 0 5px 0 5px;" onclick="showBrandPopup();"/>
 					</span>
@@ -1496,7 +1499,7 @@
 					<span style="display: flex; align-items: center;">
 						<label for="testimonialReviewAuthorName" style="width: 100px;">Author Name</label>
 						<img id="testimonialReviewAuthorInfo" style="height: 23px; width: 23px; margin: 0 5px 0 5px;" src="media/otherIcons/info.svg" onclick="" />
-						<input id="testimonialReviewAuthorName" type="text" class="cleanCursorInput" placeholder="Kevin Malone" size="40" onkeyup="testimonialReviewAuthorNameUpdate(); this.size = this.value.length * 1.15; if (this.value.length < 2) {this.size = 40}" />
+						<input id="testimonialReviewAuthorName" type="text" class="cleanCursorInput" placeholder="Kevin Malone" size="40" onkeyup="testimonialReviewAuthorNameUpdate();" />
 						<img id="testimonialReviewAuthorNameClear" alt="" src="media/otherIcons/clear.svg" style="height: 25px; width: 25px; margin: 0 5px 0 5px;" onclick="document.getElementById('testimonialReviewAuthorName').value = null;"/>
 					</span>
 
@@ -1512,7 +1515,7 @@
 					<span style="display: flex; align-items: center;">
 						<label for="testimonialReviewAuthorTitle" style="width: 100px;">Author Title</label>
 						<img id="testimonialReviewAuthorTitleInfo" style="height: 23px; width: 23px; margin: 0 5px 0 5px;" src="media/otherIcons/info.svg" onclick="" />
-						<input id="testimonialReviewAuthorTitle" type="text" class="cleanCursorInput" placeholder="Accountant" size="40" onkeyup="testimonialReviewAuthorTitleUpdate(); this.size = this.value.length * 1.15; if (this.value.length < 2) {this.size = 40}" />
+						<input id="testimonialReviewAuthorTitle" type="text" class="cleanCursorInput" placeholder="Accountant" size="40" onkeyup="testimonialReviewAuthorTitleUpdate();" />
 						<img id="testimonialReviewAuthorTitleClear" alt="" src="media/otherIcons/clear.svg" style="height: 25px; width: 25px; margin: 0 5px 0 5px;" onclick="document.getElementById('testimonialReviewAuthorTitle').value = null;"/>
 					</span>
 
@@ -1520,7 +1523,7 @@
 					<span style="display: flex; align-items: center;">
 						<label for="testimonialReviewAuthorCompany" style="width: 100px;">Author Company</label>
 						<img id="testimonialReviewAuthorCompanyInfo" style="height: 23px; width: 23px; margin: 0 5px 0 5px;" src="media/otherIcons/info.svg" onclick="" />
-						<input id="testimonialReviewAuthorCompany" type="text" class="cleanCursorInput" placeholder="Dunder Mifflin" size="40" onkeyup="testimonialReviewAuthorCompanyUpdate(); this.size = this.value.length * 1.15; if (this.value.length < 2) {this.size = 40}" />
+						<input id="testimonialReviewAuthorCompany" type="text" class="cleanCursorInput" placeholder="Dunder Mifflin" size="40" onkeyup="testimonialReviewAuthorCompanyUpdate();" />
 						<img id="testimonialReviewAuthorCompanyClear" alt="" src="media/otherIcons/clear.svg" style="height: 25px; width: 25px; margin: 0 5px 0 5px;" onclick="document.getElementById('testimonialReviewAuthorCompany').value = null;"/>
 					</span>
 
@@ -1549,7 +1552,7 @@
 					<span style="display: flex; align-items: center;">
 						<label for="callToActionGlobal" style="width: 100px;">Call to Action</label>
 						<img id="callToActionGlobalInfo" style="height: 23px; width: 23px; margin: 0 5px 0 5px;" src="media/otherIcons/info.svg" onclick="" />
-						<input id="callToActionGlobal" type="url" class="cleanCursorInput" placeholder="" size="40" onkeyup="callToActionGlobalUpdate(); this.size = this.value.length * 1.15; if (this.value.length < 2) {this.size = 40}" />
+						<input id="callToActionGlobal" type="url" class="cleanCursorInput" placeholder="" size="40" onkeyup="callToActionGlobalUpdate();" />
 						<img id="callToActionGlobalClear" alt="" src="media/otherIcons/clear.svg" style="height: 25px; width: 25px; margin: 0 5px 0 5px;" onclick="document.getElementById('callToActionGlobal').value = null;"/>
 						<span id="callToActionGlobalSpan" style="display: flex; align-items: center; border: 2px solid #26a926; border-radius: 50px; padding: 0 5px 0 5px; margin: 0 8px 0 8px;">
 							<img id="callToActionGlobalGet" alt="" src="media/otherIcons/link.svg" style="height: 25px; width: 25px; margin: 0 5px 0 5px;" onclick="showBrandPopup();"/>
@@ -1560,7 +1563,7 @@
 					<span style="display: flex; align-items: center;">
 						<label for="linkGlobal" style="width: 100px;">Link</label>
 						<img id="linkGlobalInfo" style="height: 23px; width: 23px; margin: 0 5px 0 5px;" src="media/otherIcons/info.svg" onclick="" />
-						<input id="linkGlobal" type="url" class="cleanCursorInput" placeholder="https://myWebsite.com/blog/bestBlogPost" size="40" onkeyup="linkGlobalUpdate(); this.size = this.value.length * 1.15; if (this.value.length < 2) {this.size = 40}" />
+						<input id="linkGlobal" type="url" class="cleanCursorInput" placeholder="https://myWebsite.com/blog/bestBlogPost" size="40" onkeyup="linkGlobalUpdate();" />
 						<img id="linkGlobalClear" alt="" src="media/otherIcons/clear.svg" style="height: 25px; width: 25px; margin: 0 5px 0 5px;" onclick="document.getElementById('linkGlobal').value = null;"/>
 						<span id="linkGlobalQRSpan" style="display: flex; align-items: center; border: 2px solid #2691a9; border-radius: 50px; padding: 0 5px 0 5px; margin: 0 8px 0 8px;">
 							<img id="linkGlobalQRPreview" alt="" src="media/otherIcons/photo.svg" style="height: 25px; width: 25px; margin: 0 5px 0 5px;" />
@@ -2555,6 +2558,8 @@
 
 		}
 	}
+
+	// dif var?
 	function fontColorGlobalUpdate () {
 
 		// set variable
@@ -2567,6 +2572,57 @@
 		document.getElementById('finalImageStory').style.color = fontColor;
 
 	}
+
+	// font priority
+	function fontPriority1() {
+
+		let elementId = '';
+		let text = document.getElementById('eventPromotionTitle').value;
+		let fontSize = 24;
+		let fontWeight = 700;
+
+		// select all elemnts with the class of 'eventPromotionTitleHere', but only if they are not inside the 'finalText' element
+
+		// set the font priority
+		let element = document.querySelectorAll('.eventPromotionTitleHere:not(#finalText .eventPromotionTitleHere)');
+		for (let i = 0; i < element.length; i++) {
+			element[i].style.fontSize = fontSize + 'px';
+			element[i].style.fontWeight = fontWeight;
+		}
+
+
+	}
+	function fontPriority2() {
+
+		let elementId = '';
+		let text = document.getElementById('eventPromotionTitle').value;
+		let fontSize = 18;
+		let fontWeight = 500;
+
+		// set the font priority
+		let element = document.querySelectorAll('.eventPromotionTitleHere:not(#finalText .eventPromotionTitleHere)');
+		for (let i = 0; i < element.length; i++) {
+			element[i].style.fontSize = fontSize + 'px';
+			element[i].style.fontWeight = fontWeight;
+		}
+
+	}
+	function fontPriority3() {
+
+		let elementId = '';
+		let text = document.getElementById('eventPromotionTitle').value;
+		let fontSize = 12;
+		let fontWeight = 300;
+
+		// set the font priority
+		let element = document.querySelectorAll('.eventPromotionTitleHere:not(#finalText .eventPromotionTitleHere)');
+		for (let i = 0; i < element.length; i++) {
+			element[i].style.fontSize = fontSize + 'px';
+			element[i].style.fontWeight = fontWeight;
+		}
+
+	}
+
 
 	// Hashtags
 	function hashtagsUpdate() {
